err/dedupecopy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DedupeCopy-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/dedupe_copy'...
Compiling './lib/python3.5/site-packages/dedupe_copy/dedupe_copy.py'...
***   File "./lib/python3.5/site-packages/dedupe_copy/dedupe_copy.py", line 319
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dedupe_copy/test'...
Compiling './lib/python3.5/site-packages/dedupe_copy/test/record_disk_cache_dict_performance.py'...
***   File "./lib/python3.5/site-packages/dedupe_copy/test/record_disk_cache_dict_performance.py", line 239
    print 'Run Average: {0}%\n\n'.format(((dcd_sum / py_sum) * 100))
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dedupe_copy/test/test_disk_cache_dict.py'...
***   File "./lib/python3.5/site-packages/dedupe_copy/test/test_disk_cache_dict.py", line 308
    print 'Loaded: {0} items'.format(len(self.dcd.keys()))
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dedupe_copy/test/test_manifests.py'...
***   File "./lib/python3.5/site-packages/dedupe_copy/test/test_manifests.py", line 44
    print manifest.md5_data.items()
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dedupe_copy/test/utils.py'...
***   File "./lib/python3.5/site-packages/dedupe_copy/test/utils.py", line 31
    print 'Made temporary directory: {0}'.format(abs_path)
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
